# zeus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/arma/: Cargo.toml
crates/arma/src/: error.rs  fit.rs  kalman.rs  lib.rs  optimizer.rs  params.rs  selection.rs  small_linalg.rs  spec.rs  state_space.rs
crates/arma/tests/: round_trip.rs  simulation.rs
crates/calendar/: Cargo.toml
crates/calendar/src/: date.rs  doy.rs  error.rs  expand.rs  lib.rs  sequence.rs  water_year.rs
crates/calendar/tests/: conversions.rs  expand_indices.rs  sequence.rs  water_year.rs
crates/evaluate/: Cargo.toml
crates/evaluate/src/: config.rs  correlations.rs  error.rs  input.rs  lib.rs  output.rs  scoring.rs  timeseries.rs
crates/evaluate/tests/: integration.rs
crates/io/: Cargo.toml
crates/io/src/: error.rs  lib.rs  multi_site.rs  netcdf_read.rs  observed.rs  owned_synthetic.rs  parquet_read.rs  parquet_write.rs  reader.rs  synthetic.rs  validate.rs  writer.rs
crates/io/tests/: test_netcdf_nan_skip.rs  test_parquet_roundtrip.rs  test_reader.rs  test_writer.rs
crates/knn/: Cargo.toml
crates/knn/src/: config.rs  distance.rs  error.rs  knn.rs  lib.rs  result.rs  sample.rs  select.rs
crates/knn/tests/: annual_knn.rs  daily_knn.rs  edge_cases.rs  errors.rs  k_heuristic.rs  sampling_modes.rs  scratch_reuse.rs
crates/markov/: Cargo.toml
crates/markov/src/: config.rs  error.rs  lib.rs  simulate.rs  state.rs  threshold.rs  transition.rs
crates/markov/tests/: round_trip.rs
crates/perturb/: Cargo.toml
crates/perturb/src/: config.rs  error.rs  lib.rs  occurrence.rs  ramp.rs  result.rs  safety.rs  temperature.rs
crates/perturb/tests/: pipeline.rs
crates/pet/: Cargo.toml
crates/pet/src/: lib.rs
crates/quantile-map/: Cargo.toml
crates/quantile-map/src/: config.rs  error.rs  factors.rs  fit.rs  gamma.rs  lib.rs  result.rs  target.rs  transform.rs
crates/quantile-map/tests/: round_trip.rs
crates/resample/: Cargo.toml
crates/resample/src/: annual.rs  config.rs  daily.rs  error.rs  lib.rs  obs_data.rs  resample.rs  result.rs  year_subset.rs
crates/resample/tests/: annual.rs  daily.rs  end_to_end.rs  errors.rs  fallback.rs
crates/stats/: Cargo.toml
crates/stats/src/: lib.rs
crates/warm/: Cargo.toml
crates/warm/src/: bootstrap.rs  error.rs  lib.rs  spectral.rs  stats.rs  warm.rs  warm_filter.rs
crates/warm/tests/: pipeline.rs
crates/wavelet/: Cargo.toml
crates/wavelet/src/: additive.rs  cwt.rs  error.rs  filter.rs  lib.rs  modwt.rs  mra.rs  series.rs  significance.rs
docs/: guide.md
src/: cli.rs  config.rs  convert.rs  evaluate_cmd.rs  generate.rs  logging.rs  main.rs  perturb_cmd.rs
