[package]
name = "zeus-warm"
version.workspace = true
edition.workspace = true

[dependencies]
zeus-arma = { path = "../arma" }
zeus-stats = { path = "../stats" }
zeus-wavelet = { path = "../wavelet" }
thiserror = "2"
rand = "0.9"
ndarray = "0.16"
rayon = "1"
tracing.workspace = true

[dev-dependencies]
approx = "0.5"
